Uploaded image for project: 'Qpid Proton'
  1. Qpid Proton
  2. PROTON-2132

proton-cpp fails to build with build on clang 9.0 when libc++ is used instead of libstdc++

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • proton-c-0.29.0
    • proton-c-0.30.0
    • cpp-binding
    • None
    • Patch

    Description

      [ 56%] Building CXX object cpp/CMakeFiles/qpid-proton-cpp.dir/src/terminus.cpp.o
      /home/jdanek/repos/qpid/qpid-proton/cpp/src/ssl_options.cpp:219:16: error: alias must point to a defined variable or function
      __attribute__((alias("_ZN6proton18ssl_server_optionsC1ERKNS_15ssl_certificateERKSsS5_NS_3ssl11verify_modeE")));
       ^
      /home/jdanek/repos/qpid/qpid-proton/cpp/src/ssl_options.cpp:221:16: error: alias must point to a defined variable or function
      __attribute__((alias("_ZN6proton18ssl_server_optionsC2ERKNS_15ssl_certificateERKSsS5_NS_3ssl11verify_modeE")));
       ^
      /home/jdanek/repos/qpid/qpid-proton/cpp/src/ssl_options.cpp:223:16: error: alias must point to a defined variable or function
      __attribute__((alias("_ZN6proton18ssl_client_optionsC1ERKNS_15ssl_certificateERKSsNS_3ssl11verify_modeE")));
       ^
      /home/jdanek/repos/qpid/qpid-proton/cpp/src/ssl_options.cpp:225:16: error: alias must point to a defined variable or function
      __attribute__((alias("_ZN6proton18ssl_client_optionsC2ERKNS_15ssl_certificateERKSsNS_3ssl11verify_modeE")));
       ^
      4 errors generated.
      make[2]: *** [cpp/CMakeFiles/qpid-proton-cpp.dir/build.make:583: cpp/CMakeFiles/qpid-proton-cpp.dir/src/ssl_options.cpp.o] Error 1
      

      Attachments

        Issue Links

          Activity

            People

              jdanek Jiri Daněk
              jdanek Jiri Daněk
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: