PROTON-2132 Skip libstdc++ ABI compatibility hack with libc++